Create userRouter
